add deprecated query param
